--- a/TicGame.html
+++ b/TicGame.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="TicGame.css"> <!-- Link to your updated CSS file -->
 </head>
 <body>
+    <a href="index.html" class="previous">&laquo;</a>
+
     <div class="container">
         <h1>Tic Tac Toe</h1>
         <div class="board">
