--- a/conn-index.html
+++ b/conn-index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <!-- Main container for the game -->
+    <a href="index.html" class="previous">&laquo;</a>
+
     <div class="game-container">
         <h1>Connect Four</h1>
         <!-- Game board container -->
