--- a/level3.html
+++ b/level3.html
@@ -14,7 +14,7 @@
 <body>
     <h1 id="headline">Level 3</h1>
 
-    <a  href="index.html"><button id="reveal" class="instr-label" style="font-size:16px;background-color:white" >Home</button></a>
+    <a  href="nonogramlvl1.html"><button id="reveal" class="instr-label" style="font-size:16px;background-color:white" >Home</button></a>
 
     <br>
     <article>
