--- a/about.html
+++ b/about.html
@@ -5,25 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Games Portal</title>
 
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&display=swap" rel="stylesheet">
-    <!-- stylesheets -->
+    <!-- Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron&family=Literata">
+
     <link rel="stylesheet" type="text/css" href="auth.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
      <!-- Navbar -->
-     <nav class="navbar">
+    <nav class="navbar">
         <div class="navbar-container">
             <a class="navbar-logo" href="index.html">GamesPortal</a>
-            <ul class="navbar-menu">
+            
+            <ul class="navbar-menu navbar-menu-right">
                 <li class="navbar-item"><a href="index.html">Home</a></li>
                 <li class="navbar-item"><a href="about.html">About</a></li>
+            </ul>
+            
+            <div class="navbar-item welcome-message" id="welcome-message"></div> <!-- welcome message div -->
+
+            <ul class="navbar-menu">
                 <li class="navbar-item"><a href="authentication.html">Sign In</a></li>
+                <li class="navbar-item"><a href="#" onclick="signOut()">Sign Out</a></li> <!-- Sign out link -->
             </ul>
         </div>
     </nav>
@@ -42,5 +45,36 @@
     <footer>
         <p>2024 Games Portal, Maynooth Team 6 Project</p>
     </footer>
+
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>     
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
+    <script src="auth.js"></script>
+    <script>
+        // Function to show welcome message
+        function showWelcomeMessage(name) {
+        const welcomeMessage = document.getElementById('welcome-message');
+        welcomeMessage.textContent = `Welcome, ${name}!` || `Welcome, User!`;
+        }
+        // Check if user name is stored in local storage
+        window.onload = function() {
+            const userFullName = localStorage.getItem('userFullName');
+            if (userFullName) {
+                showWelcomeMessage(userFullName);
+            }
+        };
+
+        // Function to sign out
+        function signOut() {
+            firebase.auth().signOut().then(function() {
+                // Sign-out successful.
+                localStorage.removeItem('userFullName'); // Remove user full name from local storage
+                window.location.href = "index.html"; // Redirect to index.html or any other page after sign out
+            }).catch(function(error) {
+                // An error happened.
+                console.error('Sign Out Error', error);
+            });
+        }
+    </script>
 </body>
 </html>
