--- a/authentication.html
+++ b/authentication.html
@@ -3,12 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>LogIn</title>
-         <!-- Google Fonts -->
+         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&display=swap" rel="stylesheet">
+
         <!-- stylesheets -->
         <link rel="stylesheet" type="text/css" href="auth.css">
         <link rel="stylesheet" href="styles.css">
@@ -19,10 +16,17 @@
         <nav class="navbar">
             <div class="navbar-container">
                 <a class="navbar-logo" href="index.html">GamesPortal</a>
-                <ul class="navbar-menu">
+                
+                <ul class="navbar-menu navbar-menu-right">
                     <li class="navbar-item"><a href="index.html">Home</a></li>
                     <li class="navbar-item"><a href="about.html">About</a></li>
+                </ul>
+                
+                <div class="navbar-item welcome-message" id="welcome-message"></div> <!-- welcome message div -->
+
+                <ul class="navbar-menu">
                     <li class="navbar-item"><a href="authentication.html">Sign In</a></li>
+                    <li class="navbar-item"><a href="#" onclick="signOut()">Sign Out</a></li> <!-- Sign out link -->
                 </ul>
             </div>
         </nav>
@@ -36,7 +40,7 @@
                 <div id="form_content_container">
                     <div id="form_content_inner_container">
                         <input type="text" id="full_name" placeholder="Full name">
-                        <input type="email" id="email" placeholder="Email">
+                        <input type="text" id="email" placeholder="Email">
                         <input type="password" id="password" placeholder="New Password">
 
                         <div id="button_container">
@@ -48,21 +52,44 @@
                 </div>
             </div>
         </div>
-    </body>
-    <!--Core Firebase JS SDK is required and listed first-->
-    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
 
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-         https://firebase.google.com/docs/web/setup#available-libraries -->
+        <!--Core Firebase JS SDK is required and listed first-->
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>     
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
-
-
     <script src="auth.js"></script>
 
+    <script>
+        // Function to show welcome message
+        function showWelcomeMessage(name) {
+        const welcomeMessage = document.getElementById('welcome-message');
+        welcomeMessage.textContent = `Welcome, ${name}!` || `Welcome, User!`;
+        }
+        // Check if user name is stored in local storage
+        window.onload = function() {
+            const userFullName = localStorage.getItem('userFullName');
+            if (userFullName) {
+                showWelcomeMessage(userFullName);
+            }
+        };
+
+        // Function to sign out
+        function signOut() {
+            firebase.auth().signOut().then(function() {
+                // Sign-out successful.
+                localStorage.removeItem('userFullName'); // Remove user full name from local storage
+                window.location.href = "index.html"; // Redirect to index.html or any other page after sign out
+            }).catch(function(error) {
+                // An error happened.
+                console.error('Sign Out Error', error);
+            });
+        }
+    </script>
 
     <footer>
         <p>2024 Games Portal, Maynooth Team 6 Project</p>
     </footer>
+
+    </body>
 </html>
